--- a/themes/lapsus/404.ejs
+++ b/themes/lapsus/404.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404 - Page Not Found</title>
+    <title>404 - Страница не найдена</title>
     <link rel="icon" type="image/png" href="<%= settings.logo.url %>">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <style>
@@ -86,10 +86,10 @@
 <body>
     <div class="container">
         <h1>404</h1>
-        <p>Oops! The page you're looking for could not be found.</p>
+        <p>Упс! Страница, которую вы ищете, не найдена.</p>
         <div class="buttons">
-            <a href="../dashboard" class="button">Return to Dashboard</a>
-            <a href="https://discord.gg/yourserver" class="button">Contact Support</a>
+            <a href="../dashboard" class="button">Вернуться на главную</a>
+            <a href="https://discord.gg/yourserver" class="button">Поддержка</a>
         </div>
         &nbsp;
         <center><img src="https://i.kym-cdn.com/photos/images/newsfeed/000/236/756/b33.jpg" height="250" alt="404 Cat Error"></center>
