--- a/themes/lapsus/components/navigation.ejs
+++ b/themes/lapsus/components/navigation.ejs
@@ -32,7 +32,7 @@ font-weight: semibold;
                 <svg class="w-5 h-5 mr-2" style="color: #9ca3af;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0122.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" />
                 </svg>
-                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Management </span>
+                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Управление </span>
               </div>
           </div>
           <a href="../dashboard" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
@@ -40,7 +40,7 @@ font-weight: semibold;
             <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 7.125C2.25 6.504 2.754 6 3.375 6h6c.621 0 1.125.504 1.125 1.125v3.75c0 .621-.504 1.125-1.125 1.125h-6a1.125 1.125 0 01-1.125-1.125v-3.75zM14.25 8.625c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v8.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-8.25zM3.75 16.125c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v2.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-2.25z" />
             </svg>              
-            Dashboard
+            Главная
           </a>
 
           <a href="../servers" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
@@ -48,7 +48,7 @@ font-weight: semibold;
               <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 14.25h13.5m-13.5 0a3 3 0 01-3-3m3 3a3 3 0 100 6h13.5a3 3 0 100-6m-16.5-3a3 3 0 013-3h13.5a3 3 0 013 3m-19.5 0a4.5 4.5 0 01.9-2.7L5.737 5.1a3.375 3.375 0 012.7-1.35h7.126c1.062 0 2.062.5 2.7 1.35l2.587 3.45a4.5 4.5 0 01.9 2.7m0 0a3 3 0 01-3 3m0 3h.008v.008h-.008v-.008zm0-6h.008v.008h-.008v-.008zm-3 6h.008v.008h-.008v-.008zm0-6h.008v.008h-.008v-.008z" />
                 </svg>                          
-              Servers
+              Серверы
           </a>
 
           <a href="../servers/new" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
@@ -56,7 +56,7 @@ font-weight: semibold;
             <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
             </svg>              
-            Deploy
+            Создать
           </a>
 
           <a href="../panel" target="_blank" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
@@ -64,7 +64,7 @@ font-weight: semibold;
             <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
             </svg>                   
-            Panel
+            Панель
           </a>
 
           <div class="pt-6"></div> <!-- Spacer -->
@@ -73,7 +73,7 @@ font-weight: semibold;
                 <svg class="w-5 h-5 mr-2" style="color: #9ca3af;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                 </svg>
-                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Account & Security </span>
+                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Аккаунт </span>
               </div>
           </div>
            <a href="../profile" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;"> 
@@ -81,21 +81,21 @@ font-weight: semibold;
             <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
             </svg>                           
-            Profile
+            Профиль
           </a> 
           <a href="../settings" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
           <!-- Heroicon name: outline/users -->
               <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                 </svg>                                       
-              Security
+              Безопасность
             </a>
             <a href="../logout" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
               <!-- Heroicon name: outline/users -->   
               <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15M12 9l-3 3m0 0l3 3m-3-3h12.75" />
                 </svg>                                                        
-              Logout
+              Выход
             </a>
 
             <div class="pt-6"></div> <!-- Spacer -->
@@ -104,7 +104,7 @@ font-weight: semibold;
                 <svg class="w-5 h-5 mr-2" style="color: #9ca3af;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 003 15h-.75M15 10.5a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm3 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
                 </svg>
-                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Resources & Coins </span>
+                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Ресурсы </span>
               </div>
           </div>
           <a href="../earn" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item hidden" style="color: #9ca3af; display: none;">
@@ -112,14 +112,14 @@ font-weight: semibold;
             <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.894 20.567L16.5 21.75l-.394-1.183a2.25 2.25 0 00-1.423-1.423L13.5 18.75l1.183-.394a2.25 2.25 0 001.423-1.423l.394-1.183.394 1.183a2.25 2.25 0 001.423 1.423l1.183.394-1.183.394a2.25 2.25 0 00-1.423 1.423z" />
             </svg>                               
-            Earn
+            Заработать
           </a>
           <a href="../redeem" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
             <!-- Heroicon name: outline/users -->      
             <svg class="mr-3 flex-shrink-0 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.5 12A2.5 2.5 0 0 1 21 9.5V7a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v2.5a2.5 2.5 0 0 1 0 5V17a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-2.5a2.5 2.5 0 0 1-2.5-2.5Z"/>
             </svg>            
-            Redeem
+            Промокод
           </a>
           <a href="../lv" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item hidden" style="color: #9ca3af; display: none;">
             <!-- Heroicon name: outline/users -->      
@@ -134,7 +134,7 @@ font-weight: semibold;
   <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 21L3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5" />
 </svg>
                           
-            Transfer
+            Перевод
           </a>
           
           <a href="../j4r" class="transition group flex items-center px-2 py-2 text-sm font-medium rounded-md sidebar-nav-item" style="color: #9ca3af;">
@@ -148,7 +148,7 @@ font-weight: semibold;
                 <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
                 </svg>                                                    
-              Store
+              Магазин
             </a>
             <% if (pterodactyl.root_admin == true) { %>
             <div class="pt-6"></div> <!-- Spacer -->
@@ -158,7 +158,7 @@ font-weight: semibold;
                   <path stroke-linecap="round" stroke-linejoin="round" d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z" />
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                 </svg>
-                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Administration </span>
+                <span class="px-2 bg-transparent font-semibold text-sm" style="color: #9ca3af;"> Администрация </span>
               </div>
           </div>
           
@@ -168,7 +168,7 @@ font-weight: semibold;
             <svg class="mr-3 flex-shrink-0 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 576 512" stroke-width="1.5" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" d="M176 88v40H336V88c0-4.4-3.6-8-8-8H184c-4.4 0-8 3.6-8 8zm-48 40V88c0-30.9 25.1-56 56-56H328c30.9 0 56 25.1 56 56v40h28.1c12.7 0 24.9 5.1 33.9 14.1l51.9 51.9c9 9 14.1 21.2 14.1 33.9V304H384V288c0-17.7-14.3-32-32-32s-32 14.3-32 32v16H192V288c0-17.7-14.3-32-32-32s-32 14.3-32 32v16H0V227.9c0-12.7 5.1-24.9 14.1-33.9l51.9-51.9c9-9 21.2-14.1 33.9-14.1H128zM0 416V336H128v16c0 17.7 14.3 32 32 32s32-14.3 32-32V336H320v16c0 17.7 14.3 32 32 32s32-14.3 32-32V336H512v80c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64z" />
             </svg>                           
-            Admin
+            Админка
           </a> 
           <% } %>
         </nav>
@@ -183,9 +183,9 @@ font-weight: semibold;
               <p class="text-sm font-medium" style="color: #e5e7eb;">@<%= userinfo.username %></p>
               <p class="text-xs font-medium" style="color: #9ca3af;">
               <% if (typeof packagename.charAt(0) == 'number') { %>
-                <%= packagename %> plan
+                Тариф <%= packagename %>
               <% } else { %>
-                <%= packagename.charAt(0).toUpperCase() + packagename.slice(1) %> plan
+                Тариф <%= packagename.charAt(0).toUpperCase() + packagename.slice(1) %>
               <% } %></p>
             </div>
           </div>
@@ -195,7 +195,7 @@ font-weight: semibold;
         <a id="coins" class="flex-shrink-0 w-full group block">
           <div class="flex items-center">
             <div class="ml-2">
-              <p class="text-xs font-medium" style="color: #e5e7eb;"><%= coins.toLocaleString(undefined, {maximumFractionDigits:0}) %> coin<%= coins == 1 ? "" : "s" %> in your account </p>
+              <p class="text-xs font-medium" style="color: #e5e7eb;"><%= coins.toLocaleString(undefined, {maximumFractionDigits:0}) %> монет на счету </p>
             </div>
           </div>
         </a>
