--- a/themes/lapsus/create.ejs
+++ b/themes/lapsus/create.ejs
@@ -353,7 +353,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
               <span class="breadcrumbs-separator">/</span>
               <a href="../servers">Servers</a>
               <span class="breadcrumbs-separator">/</span>
-              <span class="breadcrumbs-current">Deploy</span>
+                    <span class="breadcrumbs-current">Создать</span>
             </nav>
 
             <!-- Replace with your content -->
@@ -363,9 +363,9 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                   <svg class="section-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
                   </svg>
-                  Deploy
+                  Создать
                 </div>
-                <p class="section-subtitle">Deploy a new server on <%= settings.name %>.</p>
+                <p class="section-subtitle">Создать новый сервер на <%= settings.name %>.</p>
               </div>
             </div>
             <% if (req.query.err) { %>
@@ -439,9 +439,9 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                         <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
                       </svg>
                     </div>
-                    <span>Server Name</span>
+                    <span>Название сервера</span>
                   </label>
-                  <input type="text" class="form-control form-control-enhanced" id="name" placeholder="Enter server name">
+                  <input type="text" class="form-control form-control-enhanced" id="name" placeholder="Введите название сервера">
                 </div>
 
                 <!-- Location Field -->
@@ -453,7 +453,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                         <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
                       </svg>
                     </div>
-                    <span>Location</span>
+                    <span>Локация</span>
                   </label>
                   <select class="form-control form-control-enhanced" id="InputLoc">
                     <% if (Object.keys(settings.api.client.locations).length === 0) { %>
@@ -474,7 +474,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9 17.25v1.007a3 3 0 01-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0115 18.257V17.25m6-12V15a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 15V5.25m18 0A2.25 2.25 0 0018.75 3H5.25A2.25 2.25 0 003 5.25m18 0V12a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 12V5.25" />
                       </svg>
                     </div>
-                    <span>Software</span>
+                    <span>Софт</span>
                   </label>
                   <div class="futuristic-dropdown-wrapper relative" id="egg-wrapper">
                     <input type="hidden" id="egg" value="">
@@ -600,7 +600,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                           <path stroke-linecap="round" stroke-linejoin="round" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4" />
                         </svg>
                       </div>
-                      <span>RAM (GiB)</span>
+                      <span>ОЗУ (GiB)</span>
                     </label>
                     <input type="text" class="form-control form-control-enhanced" id="ram" placeholder="<%= (packages ? packages.ram : 0)/1024 + extraresources.ram/1024 - ram/1024 %>" value="<%= (packages ? packages.ram : 0)/1024 + extraresources.ram/1024 - ram/1024 %>">
                   </div>
@@ -613,7 +613,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                           <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
                         </svg>
                       </div>
-                      <span>Disk (GiB)</span>
+                      <span>Диск (GiB)</span>
                     </label>
                     <input type="text" class="form-control form-control-enhanced" id="disk" placeholder="<%= (packages ? packages.disk : 0)/1024 + extraresources.disk/1024 - disk/1024 %>" value="<%= (packages ? packages.disk : 0)/1024 + extraresources.disk/1024 - disk/1024 %>">
                   </div>
@@ -626,7 +626,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                           <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-16.5 3.75H3m18 0h-1.5M8.25 19.5V21M12 3v1.5m0 15V21m3.75-18v1.5m0 15V21m-9-1.5h10.5a2.25 2.25 0 002.25-2.25V6.75a2.25 2.25 0 00-2.25-2.25H6.75A2.25 2.25 0 004.5 6.75v10.5a2.25 2.25 0 002.25 2.25z" />
                         </svg>
                       </div>
-                      <span>CPU (Cores)</span>
+                      <span>CPU (Ядра)</span>
                     </label>
                     <input type="text" class="form-control form-control-enhanced" id="cpu" placeholder="<%= (packages ? packages.cpu : 0)/100 + extraresources.cpu/100 - cpu/100 %>" value="<%= (packages ? packages.cpu : 0)/100 + extraresources.cpu/100 - cpu/100 %>">
                   </div>
@@ -638,7 +638,7 @@ for (let i = 0, len = pterodactyl.relationships.servers.data.length; i < len; i+
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
                     </svg>
-                    <span>Deploy Server</span>
+                    <span>Создать сервер</span>
                   </button>
                 </div>
               </div>
