--- a/themes/lapsus/index.ejs
+++ b/themes/lapsus/index.ejs
@@ -375,39 +375,39 @@
                 <img src="<%= settings.logo.url %>" alt="Logo">
             </div>
             
-            <h1 class="login-title">Welcome Back</h1>
-            <p class="login-subtitle">Sign in to continue to <%= settings.name %></p>
+            <h1 class="login-title">Добро пожаловать</h1>
+            <p class="login-subtitle">Войдите, чтобы продолжить в <%= settings.name %></p>
 
             <div class="login-buttons">
                 <a id="myBtn" class="login-btn login-btn-discord">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36" fill="currentColor">
                         <path d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/>
                     </svg>
-                    <span>Continue with Discord</span>
+                    <span>Войти через Discord</span>
                 </a>
 
                 <a id="comingsoon" class="login-btn login-btn-google">
                     <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M12.037 21.998a10.313 10.313 0 0 1-7.168-3.049 9.888 9.888 0 0 1-2.868-7.118 9.947 9.947 0 0 1 3.064-6.949A10.37 10.37 0 0 1 12.212 2h.176a9.935 9.935 0 0 1 6.614 2.564L16.457 6.88a6.187 6.187 0 0 0-4.131-1.566 6.9 6.9 0 0 0-4.794 1.913 6.618 6.618 0 0 0-2.045 4.657 6.608 6.608 0 0 0 1.882 4.723 6.891 6.891 0 0 0 4.725 2.07h.143c1.41.072 2.8-.354 3.917-1.2a5.77 5.77 0 0 0 2.172-3.41l.043-.117H12.22v-3.41h9.678c.075.617.109 1.238.1 1.859-.099 5.741-4.017 9.6-9.746 9.6l-.215-.002Z" clip-rule="evenodd"/>
                     </svg>
-                    <span>Continue with Google</span>
+                    <span>Войти через Google</span>
                 </a>
             </div>
 
             <div class="login-features">
-                <div class="login-features-title">Why choose us?</div>
+                <div class="login-features-title">Почему мы?</div>
                 <div class="login-features-grid">
                     <div class="login-feature">
                         <div class="login-feature-icon">⚡</div>
-                        <div>Fast Setup</div>
+                        <div>Быстро</div>
                     </div>
                     <div class="login-feature">
                         <div class="login-feature-icon">🔒</div>
-                        <div>Secure</div>
+                        <div>Безопасно</div>
                     </div>
                     <div class="login-feature">
                         <div class="login-feature-icon">🚀</div>
-                        <div>Reliable</div>
+                        <div>Надёжно</div>
                     </div>
                 </div>
             </div>
@@ -416,18 +416,18 @@
         <!-- The Modal -->
         <div id="myModal" class="modal">
             <div class="modal-content">
-                <h2>One more thing</h2>
-                <p style="margin-bottom: 1rem;">Please confirm that you allow us to:</p>
+                <h2>Ещё кое-что</h2>
+                <p style="margin-bottom: 1rem;">Пожалуйста, подтвердите, что вы разрешаете нам:</p>
                 <ul style="list-style: disc; padding-left: 1.5rem; margin-bottom: 1.5rem; color: #9ca3af;">
-                    <li>Automatically join you to our Discord server</li>
-                    <li>Access your email address, username & avatar</li>
+                    <li>Автоматически добавить вас на наш Discord сервер</li>
+                    <li>Получить доступ к вашему email, имени и аватару</li>
                 </ul>
                 <div class="modal-buttons">
                     <a href="../login" class="modal-btn modal-btn-primary">
-                        Continue
+                        Продолжить
                     </a>
                     <a class="close modal-btn modal-btn-secondary">
-                        Cancel
+                        Отмена
                     </a>
                 </div>
             </div>
@@ -436,7 +436,7 @@
         <div class="tooltip" role="tooltip" id="tooltip">
             <div class="tooltip-arrow" data-popper-variation="1"></div>
             <div class="tooltip-inner">
-                Coming soon. We're working on this.
+                Скоро. Мы работаем над этим.
             </div>
         </div>
     </div>
