--- a/themes/lapsus/redeem.ejs
+++ b/themes/lapsus/redeem.ejs
@@ -107,8 +107,8 @@
         <!-- partial:partials/_navbar.html -->
         <!-- partial -->
         <div class="main-panel">
-           <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Coupons</h2>
-           <p class="text-md font-medium text-gray-600">Redeem a coupon.</p>
+           <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Промокоды</h2>
+           <p class="text-md font-medium text-gray-600">Активируйте промокод.</p>
            &nbsp;
 						<% if (req.query.err) { %>
             <div style="border-radius: 15px;" class="alert">
@@ -123,7 +123,7 @@
                       </div>
                     <div class="ml-3 flex-1 md:flex md:justify-between">
                       <p class="text-sm text-gray-800">
-                        You have not provided a coupon code.
+                        Вы не ввели промокод.
                       </p>
                     </div>
                     </div>
@@ -139,7 +139,7 @@
                       </div>
                     <div class="ml-3 flex-1 md:flex md:justify-between">
                       <p class="text-sm text-gray-800">
-                        Invalid coupon code. Was it claimed already?
+                        Неверный промокод. Возможно, он уже использован?
                       </p>
                     </div>
                     </div>
@@ -156,7 +156,7 @@
                       </div>
                     <div class="ml-3 flex-1 md:flex md:justify-between">
                       <p class="text-sm text-gray-800">
-                        Success!
+                        Успешно!
                       </p>
                     </div>
                     </div>
@@ -172,7 +172,7 @@
                       </div>
                     <div class="ml-3 flex-1 md:flex md:justify-between">
                       <p class="text-sm text-gray-800">
-                        Coupon failure.
+                        Ошибка промокода.
                       </p>
                     </div>
                     </div>
@@ -185,11 +185,11 @@
                 <div class="card">
                   <div class="card-body">
 									<form action="/coupon_redeem">
-                      <label for="code">Coupon</label>
+                      <label for="code">Промокод</label>
                       <br></br>
-											<input style=" padding: 8px;" type="text" class="focus:border-gray-400 focus:ring-gray-400 transition ease-in-out delay-100 group relative border border-gray-300 flex w-1/4 justify-center form-control rounded-md" placeholder="Enter your coupon code here" name="code">
+											<input style=" padding: 8px;" type="text" class="focus:border-gray-400 focus:ring-gray-400 transition ease-in-out delay-100 group relative border border-gray-300 flex w-1/4 justify-center form-control rounded-md" placeholder="Введите промокод" name="code">
 											<br></br>
-                      <button class="transition delay-100 group relative  justify-center rounded-md border border-transparent bg-black-400 py-2 px-4 text-sm font-medium text-white hover:bg-gray-500 focus:outline-none">Redeem</button>
+                      <button class="transition delay-100 group relative  justify-center rounded-md border border-transparent bg-black-400 py-2 px-4 text-sm font-medium text-white hover:bg-gray-500 focus:outline-none">Активировать</button>
 									</form>
 
                   </div>
